# blink-test

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  STM32G474XX_FLASH.ld  blink-test.ioc  debug_me.sh  example.env  run_tests.sh  stm32g474xe_flash.ld
.agents/skills/: autonomous_debugging.md
.agents/skills/renode-python-scripting/: SKILL.md
.agents/skills/stm32-renode-testing/: SKILL.md
Core/Inc/: FreeRTOSConfig.h  adc.h  app.h  foc_types.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: adc.c  app.cc  app_freertos.c  dma.c  foc_types.cc  gpio.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  tim.c  uart_dma.cc  usart.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
scratch/: test_gdb_server.py
scripts/: debug_tools.py  diagnose_fault.py  flash_target.py  gdb_agent.py  monitor_uart.py  validate_gdb.py
sim/: common.resc  debug.resc  explorer.py  main_test.py  run_headless.py  stm32g474.repl  test_runner.resc  timer_sync.py
src/: app.cc  as5048a_spi_sensor.cc  as5048a_spi_sensor.h  foc_types.cc  foc_types.h  stm32_adc_current_sense.cc  stm32_adc_current_sense.h  stm32_motor_driver.cc  stm32_motor_driver.h  uart_dma.cc  uart_dma.h
tests/: CMakeLists.txt  main_test.cc  run.sh  test_adc_current_sense.cc  test_dummy.cc  test_spi_sensor.cc  test_timers.cc
